# csse4011

./: README.md  index.html
csse4011Project/: base_to_pc.proto  base_to_pc_pb2.py  force_variable_into_tago.py  main.py  old.py  vis2.py
csse4011Project/project/base/: CMakeLists.txt  prj.conf
csse4011Project/project/base/boards/: nrf52840dk_nrf52840.overlay
csse4011Project/project/base/src/: bluetooth.c  bluetoothtransmit.c  main.c
csse4011Project/project/mobile/: CMakeLists.txt  prj.conf
csse4011Project/project/mobile/boards/: thingy52_nrf52832.overlay
csse4011Project/project/mobile/src/: bluetooth.c  bluetoothlisten.c  main.c  us.c
